Fix horizontal card image size on tablets

--- a/src/components/cards/horizontal/style.scss
+++ b/src/components/cards/horizontal/style.scss
@@ -88,6 +88,7 @@
         display: flex;
         img {
             width: 100%;
+            max-height: 200px;
             border-radius: 0 10px 10px 0;
             object-fit: cover;
         }
